--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3QGP6KGYNY"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7K0B2CD2CW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3QGP6KGYNY');
+  gtag('config', 'G-7K0B2CD2CW');
+</script>    
 </script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MuscleBlaze - Home</title>
