--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-7K0B2CD2CW');
-</script>    
+  
+    gtag('config', 'G-7K0B2CD2CW, { 'debug_mode':true });</script>    
 </script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MuscleBlaze - Home</title>
