--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   gtag('js', new Date());
 
   
-    gtag('config', 'G-7K0B2CD2CW, { 'debug_mode':true });
+    gtag('config', 'G-7K0B2CD2CW', { 'debug_mode':true });
         </script>    
 </script><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
