--- a/products.html
+++ b/products.html
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3>Whey Protein – Chocolate</h3>
         <p>Flavors: Chocolate | Vanilla | Mango</p>
         <p>Available: 1kg • 2kg • 4kg</p>
-        <button onclick="location.href='product-detail.html'">View Product</button>
+        <button onclick="https://fabulous-longma-f742c8.netlify.app/payment.html>View Product</button>
     </div>
 
     <div class="card">
@@ -88,7 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3>Whey Isolate – Vanilla</h3>
         <p>Flavors: Vanilla | Coffee</p>
         <p>Available: 1kg • 2kg</p>
-        <button onclick="location.href='product-detail.html'">View Product</button>
+        <button onclick="https://fabulous-longma-f742c8.netlify.app/payment.html">View Product</button>
     </div>
 
 </div>
